Add content to fools journey

--- a/13-The-Fools-Journey.adoc
+++ b/13-The-Fools-Journey.adoc
@@ -215,7 +215,19 @@ In relation between these two paths, [http://lib.oto-usa.org/libri/liber0156.htm
 
 This path in the ANQ tree or card number has no correspondence in other systems.
 
-### XXIII - The Rebel
+### XXIII - Rebellion
+
+(9/19) Desire -> (11/29) Subject
+
+The essence of this path is what Austin Osman Spare called Self-Love.
+It is the desire to be oneself with whatever constraints that entails or whatever ensues.
+It is the existential concept of being authentically oneself.
+This does not necessarily mean rebellion, but in the rebel we see most clearly the expression of oneself.
+Rebel, misfit, freak, many that embrace simply being themselves end up wearing these labels or even taking them for themselves.
+There is a notion of God that says that the mind of God holds and sustains all things.
+If we reject God we find ourselves cut off from any plan or purpose.
+Self-love welcomes this state as essential.
+To truly be ourselves we run towards this fate.
 
 ### XXIV - The Labyrinth
 
