More stuff for intro

--- a/00-Intro.adoc
+++ b/00-Intro.adoc
@@ -1,26 +1,39 @@
 ## Introduction
 
-Magick is the art that weaves the fabric of reality.footnote:[We choose to use the spelling "magick" in the tradition of Aliester Crowley to differentiate from works of illusion.]
-There are many systems of magick, many paradigms.
-What makes each worthy of being called "magick" is the aim to manifest results beyond natural means.
-A comptent magickian must have some knowledge and skill of natural technologies, but the study of magick aims to move beyond the natural, to the super-natural, to miracules.
-This brings us immediately to the fundamental paradox of magick:
-How can magick be possible if at the core magick is the aims to manifest by impossible means?
+Magick is the art that weaves the fabric of reality.
+True magick is not merely a technique of working within natural law, it is a means of working beyond these laws.
+Magick transcends the natural.
+It is the art of the supernatural.
 
-One common response to this paradox is to determine that this definition of magick is an absurd self-contridution and worth no further time or consideration.
+There are many systems of magick, many paradigms.
+What makes any worthy of being called "magick" is the ability to manifest results beyond natural means.
+A comptent magickian must have some knowledge and skill of natural technologies, of the mind, body, physics, etc.
+There is no reason to use magick for that which can be achieved directly, and natural techniques are almost always more reliable.
+Magick, however, should be understood as set apart.
+Magick is miraculous.
+So at this offset we find ourselves immediately to the fundamental paradox of magick:
+How can magick be possible if at the core magick is the aims to manifest by impossible means?footnote:[We choose to use the spelling "magick" in the tradition of Aliester Crowley to differentiate from works of illusion.]
+
+One common response to this paradox is to declare that this definition of magick is an absurd self-contradiction and worth no further effort or consideration.
 For many, this is the end of the matter.
-For others, those who do practice magick side step this paradox, saying that magick is entirely natural.
+There are also those who use the word "magick" differently, they side-step the paradox declaring that magick is entirely natural.
 When apparently miraculous things occur as the result of some magick work it has obeyed some natural law simply not fully expressed or yet understood.
-Also, of course, many do just fine without any fundamental theory.
+This is fine, as far as it goes, but it does not go anywhere in particular.
+If we suspect that a action has effect by an unknown natural means then we should seek to express that means and pursue it by scientific study.
+
+There are also, of course, many do just fine in a practice of magick without any fundamental theory.
 They just _do_ magick and get results and spend no time or concern about deeper questions of the possible and impossible.
+This is also fine, but probably not the target reader.
 
 This current work is the result of an obsession in exploring the paradox of magick.
 The fundamental theory we put forth in this work is that magick only seems to be a paradox when we misunderstand reality and possibility.
 Magick is the art that weaves the fabric of reality.
+Magick happens outside of, beyond, reality.
 Magick never has been something that is real or unreal, possible or impossible, because magick is not any of these things.
 Magick is no-thing.
 
 We will endevor to trace the thread of magick from non-being to manifest reality and beyond, to show how no-thing, non-being, makes everything manifest, carrying its incompleteness with it at every step.
+In each step we will show how this can inform the practice of magick.
 
 ### What is ANQ?
 
