--- a/00-Intro.adoc
+++ b/00-Intro.adoc
@@ -1,32 +1,61 @@
-## Introduction
+== Introduction
 
-Magick is the art that weaves the fabric of reality.
-True magick is not merely a technique of working within natural law, it is a means of working beyond these laws.
+Why is there anything at all instead of nothing?
+This is the fundamental question of metaphysics and the starting point of the system of thee c-ov-n.
+It is this question that leads us in these explorations, from one question to another spiraling around this central question of being and nothingness.
+
+What does it mean to be?
+We find ourselves in a constantly changing world, how do we define ourselves?
+Why are some aspects of our being accompanied by perception and consciousness?
+As beings, what can we do?
+What is meant by Will? "free" will?
+
+The system of thee c-ov-n does not attempt to answer these questions so much as it provides a way to orient onself to the question.
+Thee c-ov-n is a system of Magick, itself a method of exploration of the being and possibility.
+
+=== Defining Magick
+
+Magick is the weaving of the fabric of reality.
+Magick is not merely a technique of working within natural law, it is a means of working beyond these laws.
 Magick transcends the natural.
-It is the art of the supernatural.
+Magick is the art of the supernatural.footnote:[We choose to use the spelling "magick" in the tradition of Aliester Crowley to differentiate from works of illusion.]
+
+With this definition we stake out in a bold direction.
+We assert that magick is not mere metaphor for psychological processes.
+Magick is not working by merely unknown mechanism.
+Magick is not religion, nor is it a science.
 
 There are many systems of magick, many paradigms.
 What makes any worthy of being called "magick" is the ability to manifest results beyond natural means.
 A comptent magickian must have some knowledge and skill of natural technologies, of the mind, body, physics, etc.
 There is no reason to use magick for that which can be achieved directly, and natural techniques are almost always more reliable.
-Magick, however, should be understood as set apart.
+Magick, however, should be set apart.
 Magick is miraculous.
-So at this offset we find ourselves immediately to the fundamental paradox of magick:
-How can magick be possible if at the core magick is the aims to manifest by impossible means?footnote:[We choose to use the spelling "magick" in the tradition of Aliester Crowley to differentiate from works of illusion.]
+So at the outset we find ourselves immediately to the fundamental paradox of magick:
+How can magick be possible if at the core magick is the aims to manifest by impossible means?
 
-One common response to this paradox is to declare that this definition of magick is an absurd self-contradiction and worth no further effort or consideration.
-For many, this is the end of the matter.
-There are also those who use the word "magick" differently, they side-step the paradox declaring that magick is entirely natural.
+One common response to this paradox is to declare that this definition of magick is an absurd self-contradiction and worth no further consideration or effort.
+For those that believe the world to be entirely a complex mechasm of cause and effect this is the end of the matter.
+If magick has no mechanism then it can not _do_ anything.
+
+Many use the word "magick" differently, they side-step the paradox declaring that magick is entirely natural.
+Indeed, many sciences were originally couched in mystery and mysticism, as Author C. Clarke wrote, "Any sufficiently advanced technology is indistinguishable from magic."
 When apparently miraculous things occur as the result of some magick work it has obeyed some natural law simply not fully expressed or yet understood.
 This is fine, as far as it goes, but it does not go anywhere in particular.
-If we suspect that a action has effect by an unknown natural means then we should seek to express that means and pursue it by scientific study.
+We aim to root this "magick" in a deeper place.
+If we suspect that a action has effect by an unknown natural means then we should seek to express that means and pursue it by scientific study, but magick is result without mechanism and does not yield its secrets to scientific study.
 
-There are also, of course, many do just fine in a practice of magick without any fundamental theory.
-They just _do_ magick and get results and spend no time or concern about deeper questions of the possible and impossible.
-This is also fine, but probably not the target reader.
+Many do just fine practicing of magick without any fundamental theory and without opinions on the possiblity and imposibility.
+Magick is a practice.
+We _do_ magick.
+So is how we _think_ about magick irrelevant?
+I have found quite the opposite to be true.
+Thinking is a kind of doing.
+Just as when we meditate we may focus on clearing thoughts from our mind, when we are planning and executing ritual work how we think about the work shapes how results manifest.
 
 This current work is the result of an obsession in exploring the paradox of magick.
 The fundamental theory we put forth in this work is that magick only seems to be a paradox when we misunderstand reality and possibility.
+Existence itself is a paradox and it is this paradox which permits magick.
 Magick is the art that weaves the fabric of reality.
 Magick happens outside of, beyond, reality.
 Magick never has been something that is real or unreal, possible or impossible, because magick is not any of these things.
@@ -35,7 +64,7 @@ Magick is no-thing.
 We will endevor to trace the thread of magick from non-being to manifest reality and beyond, to show how no-thing, non-being, makes everything manifest, carrying its incompleteness with it at every step.
 In each step we will show how this can inform the practice of magick.
 
-### What is ANQ?
+=== What is ANQ?
 
 This book introduces the concepts and practices of working with the ANQ meta-magick system.
 This is an open system with a structure inspired by Qabalah/Kabbalah, but with no intent to be an interpretation of such systems.
