--- a/13-The-Fools-Journey.adoc
+++ b/13-The-Fools-Journey.adoc
@@ -231,6 +231,17 @@ To truly be ourselves we run towards this fate.
 
 ### XXIV - The Labyrinth
 
+(11/29) Subject -> (8/17) Thought
+
+Know thyself.
+This is the path of the brain and how its labyrinth of thoughts and connections bind us and make us in this incarnation.
+The question of how we define ourselves winds about itself.
+Our memories build out into our personal mythos.
+We burrow deeper and deeper into ourselves until we cannot find our way out.
+Afterall, we do not seek the way out, we seek our center.
+
+This path corresponds to the path called the Aeon in the Thoth tarot and Judgement in the G∴D∴, though the connection has moved with the splitting of the tenth sphere.
+
 ### XXV - The Aeon
 
 ### XXVI - Shadows
